Making geopackage, and 24 hours of data, default selections.  Fixing spacing around options and advanced. (#118)

--- a/web-app/src/app/export/export-dialog.component.scss
+++ b/web-app/src/app/export/export-dialog.component.scss
@@ -140,3 +140,7 @@
   overflow: hidden;
   display: flex;
 }
+
+mat-checkbox {
+  margin: 0 10px;
+}
